overflow errors fixed for mobile

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 html,body{
   overflow: visible;
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow-y: visible;
+  overflow-x: visible;
   background-color: #f9f3e3;
   width: 100%;
   height: 100%;
